--- a/README
+++ b/README
@@ -11,6 +11,27 @@
 #	- H2 database
 #	- Maven
 
+# Why these technologies?
+# 
+# Spring 4 MVC has several features to make the development more fast and to have easy maintenance, e.g.: Dependency injection, easy handling of routes to
+#create in your controller, easy handling between controller and the part of the view (use of Thymeleaf) among others.
+# Still, Spring has a backend structural where uses WebSocket to connect the server and the client, where make it easy to send data from Controller to Frontend.
+# The use of Spring Boot explain for the fact that it comes pre-configured, have a set of frameworks/technologies to reduce the time of configuration
+#provinding you the shortest way to have a Spring Web application. In the Spring Boot page we can have a simples RESTful application up and running
+#with almost zero configuration (https://spring.io/guides/gs/rest-service/).
+# Spring Boot comes with Spring Data JPA, as well as the Thymeleaf and H2 database. Spring Data JPA uses the JPA API to have an integration with H2 database,
+#beeing easy to create your repositories. Thymeleaf comes with Spring Boot and this is often used in HTML pages, by tags. I used this because Spring Boot creates
+#a bridge between server and client and then, is easy to handler the data and put into the HTML page.
+# Maven is a tool that helps the developer to make build of your project, to choose several external libraries and put them into your application just with 
+#little configuration. Maven is one of the most used in the world to build projects.
+
+# What I expect?
+#
+# Would like to work in an amazing team where I would have the chance to exchange technical information and everyday looking for personal growth. Always
+#looking for be happy to work consciously to be prepared for new big challenges. This is what let me happy.
+#
+# Thank you.
+
 # How to execute the Web Application ( Execute via shell the following steps ):
 # 	-   git clone https://github.com/alexandreJavaDeveloper/product-selection.git
 #	-   cd product-selection/
